# auth_api

./: .gitignore  Makefile  README.md  alembic.ini  config.dev.yaml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/alembic/: env.py
app/alembic/versions/: a82a1ef1a137_create_user_table.py
app/config/: __init__.py  base.py  dev.py  prod.py  test.py
app/controllers/: auth_controller.py
app/core/: celery_app.py  db.py  dependencies.py  env.py  redis.py
app/middlewares/: exception.py  request.py
app/repositories/: auth_repository.py  base.py
app/routers/: auth_router.py  base.py
app/schemas/: __init__.py  base.py  event.py  token_schemas.py  user_schemas.py
app/services/: email_service.py
app/tasks/: email_task.py  utils.py
app/utils/: alembic_utils.py  logging.py
app/utils/auth/: mfa.py  token.py
src/: __init__.py  api.py
src/alembic/: env.py
src/alembic/versions/: 3010c6b43067_create_profile_table.py  a82a1ef1a137_create_user_table.py  (+1 more)
src/auth/: controller.py  router.py
src/config/: __init__.py  base.py  dev.py  prod.py  test.py
src/controllers/: auth_controller.py
src/core/: celery_app.py  db.py  dependencies.py  env.py  exception.py  redis.py
src/entities/: __init__.py  base.py  event.py  user_entity.py
src/middlewares/: exception.py  request.py
src/repositories/: auth_repository.py  base.py
src/routers/: auth_router.py  base.py
src/schemas/: user_schemas.py
src/services/: email_service.py
src/tasks/: email_task.py  utils.py
src/utils/: __init__.py  alembic_utils.py  logging.py
(+10 files in other folders)
