[project]
name = "auth-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asgiref>=3.11.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.3.1",
    "eventlet>=0.40.3",
    "fastapi>=0.121.3",
    "fastapi-cache>=0.1.0",
    "fastapi-cache2>=0.2.2",
    "fastapi-mail>=1.5.8",
    "flower>=2.0.1",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "loguru>=0.7.3",
    "psycopg2>=2.9.11",
    "psycopg[binary,pool]>=3.2.13",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "pyotp>=2.9.0",
    "python-jose>=3.5.0",
    "qrcode[pil]>=8.2",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "zxcvbn>=4.5.0",
]
